# NoMa

./: .gitignore  .mailmap  .project  Makefile.in  README  bootstrap_from_git.sh  configure  configure.ac  index.php  script.js  styles.css  subst.sh.in
classes/: class_nwTemplate.php
config/: config.php  config_override.php  templates.php
contrib/: Makefile.in  configconvert.php  configconvert.pl  noma.conf
contrib/icinga2/: commands.conf  notifications.conf  templates.conf
css/: anytimec.css
doc/: AUTHORS  AUTHORS.txt  CHANGELOG.txt  DOCUMENTATION.txt  Makefile.in  OVERVIEW_OF_TABLES.txt  README  TODO.txt  UPGRADE.txt  VERSION.txt  release.md
etc/: NoMa.db  NoMa.yaml  NoMa.yaml.in  apache2-noma.conf.in
inc/: authentication.php  change_contactgroups.php  change_contacts.php  change_notifications.php  change_timeframes.php  content_add-edit.php  content_contact_manager.php  content_contactgroup_manager.php  content_funcs.php  content_log_viewer.php  content_login.php  content_overview.php  content_status_viewer.php  content_timeframes.php  general.php  general_app.php  html.php  preview_host_service.php
js/: anytimec.js
lang/: de.php  en.php
m4/: ax_check_group.m4  ax_check_user.m4
notifier/: Makefile.in  alert_via_noma.pl  alert_via_noma.pl.in  noma_conf.pm  noma_daemon.pl  noma_daemon.pl.in  noma_initscript.debian  noma_initscript.debian.in  noma_initscript.rh.in  noma_initscript.rh5  noma_initscript.rh5.in  noma_initscript.suse  noma_initscript.suse.in  sendEmail.pl  sendEmail.pl.in  sendGrowl.pl  sendGrowl.pl.in  sendSMS.pl  sendSMS.pl.in  sendSMSfinder.pl  sendSMSfinder.pl.in  sendToNagios.pl  sendToNagios.pl.in  sendVoice.pl  sendVoice.pl.in  voicecall.pl  voicecall.pl.in  voicecall_starface.pl
notifier/lib/: array_hash.pm  bundler.pm  contacts.pm  database.pm  datetime.pm  debug.pm  escalations.pm  thread_procs.pm  time_frames.pm
notifier/testscripts/: README  voicecall_dummy.pl  voicecall_dummyui.pl
share/: Makefile.in  index.php
share/classes/: class_Growl.php  class_Logging.php  class_nwTemplate.php
share/config/: Makefile.in  config.php  config.php.in  templates.php  templates.php.in
share/css/: styles.css
share/inc/: authentication.php  change_contactgroups.php  change_contacts.php  change_notifications.php  change_timeframes.php  content_add-edit.php  content_contact_manager.php  content_contactgroup_manager.php  content_funcs.php  content_log_viewer.php  content_login.php  content_overview.php  content_status_viewer.php  content_timeframe_manager.php  content_timeframes.php  general.php  html.php  noma-backend-mysql.php  noma-backend-sqlite3.php
share/js/: script.js
share/lang/: de.php  en.php
share/templates/: add-edit_let_notifier_handle.html  add-edit_notification.html  add-edit_notification_contacts_methods.html  add-edit_notification_contacts_types.html  contact_manager.html  contact_manager_admin.html  contact_manager_admin_delete.html  contact_manager_escalations_header.html  contact_manager_escalations_row.html  contact_manager_groups_header.html  contact_manager_groups_row.html  contact_manager_holidays_row.html  contact_manager_notifications_header.html  contact_manager_notifications_row.html  contact_manager_notifications_to_groups_header.html  contact_manager_notifications_to_groups_row.html  contactgroup_manager_add.html  contactgroup_manager_edit.html  contactgroup_manager_escalations_header.html  contactgroup_manager_escalations_row.html  contactgroup_manager_notifications_header.html  contactgroup_manager_notifications_row.html  index.html  log_viewer.html  log_viewer_row.html  navigation.html  overview.html  overview_row.html  status_viewer.html  status_viewer_row.html  timeframe_manager.html  timeframe_manager_add.html  timeframe_manager_admin.html  timeframe_manager_contactgroups_header.html  timeframe_manager_contactgroups_row.html  timeframe_manager_contacts_header.html  timeframe_manager_contacts_row.html  timeframe_manager_delete.html  timeframe_manager_edit.html  timeframe_manager_holidays_row.html  (+2 more)
sql/: Makefile.in  create_tables.sql  mysql_1.0.6_to_1.0.7.sql  mysql_new_install.sql  new_tables.sql  transfer_nagios.sql
sql/mysql/: mysql_1.0.5_to_1.0.6.sql  mysql_1.0.6_to_1.0.7.sql  mysql_new_install.sql  transfer_nagios.sql  upgradedb_2000-2200.sql
sql/sqlite3/: sqlite_new_install_data.sql  sqlite_new_install_structure.sql
sql/sqlite3/install/: default_data.sql  default_schema.sql  (+1 more)
t/: daemon.t.bak  generateNotificationList.t  getContacts.db  getContacts.t  getNextMethod.t  maxValue.t
templates/: add-edit_let_notifier_handle.html  add-edit_notification.html  add-edit_notification_contacts_methods.html  add-edit_notification_timeperiod.html  contact_manager.html  contact_manager_admin_delete.html  contact_manager_password.html  contactgroup_manager.html  contactgroup_manager_add.html  contactgroup_manager_delete.html  contactgroup_manager_edit.html  index.html  log_viewer.html  login.html  navigation.html  navigation_link.html  overview.html  overview_row.html  timeframe_manager.html  timeframe_manager_admin_delete.html
var/: Makefile.in
(+2 files in other folders)
